# test-time-adapters

./: .gitignore  APT.py  APT_environment.yml  LICENSE  README.md  YOLO_TRANSFORMS_COMPARISON.md  a.ipynb  data_split.ipynb  detectron.ipynb  example.ipynb  example_apt.ipynb  example_apt_enhanced.ipynb  imagenetvid.yaml  marimo.html  pretraining.ipynb  pretraining_topk.ipynb  pretraining_transformers.ipynb  pretraining_yolo.ipynb  pretraining_yolo_trainer.ipynb  pretraining_yumin.ipynb  pyproject.toml  pytorch_baseline_v2.ipynb  rd-detr.ipynb  run_apt.ipynb  run_apt.py  sort.ipynb  test.ipynb  trainer.py  yolo_v8_transforms_example.py  yolox.ipynb  yolox_apt.ipynb  yolox_apt2.ipynb
apt/: dataloader.py  include.py  train.py  train2.py  train_from_pretrained.py  train_from_pretrained2.py
apt/dataset/: real_data.yaml
apt/dataset/environment/: corrupt.py
apt/dataset/preprocess/: annotations_to_txt_train.py  annotations_to_txt_val.py  img_to_640_train.py  img_to_640_train_multi.py  img_to_640_val.py  img_to_640_val_multi.py  label_to_one_train.py  label_to_one_val.py  make_yaml.py
apt/datasets/: ImagenetVID.py  __init__.py
apt/src/: __main__.py  runtime.py
apt/src/datasets/: GOT10k.py
docs/references/example/: README.md
old/: pretraining.ipynb  train.py  train2.py  train_from_pretrained2.py  yolox_apt.ipynb
old/dataset/: real_data.yaml
old/dataset/preprocess/: img_to_640_train_multi.py  img_to_640_val.py  pre_process.py
old/environment/foggy/: stylegan3_foggy_train.py
other_method/: baseline.py  baseline_test.ipynb  utils.py
other_method/ActMAD/: ActMAD.ipynb  test.ipynb
other_method/DUA/: DUA.ipynb
other_method/Direct_method/: task_map.ipynb
other_method/Mean-teacher/: Mean_teacher.ipynb
other_method/NORM/: NORM.ipynb
other_method/WHW/: whw.ipynb
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train22/: args.yaml  results.csv
tool/: box_ops.py  custom_hungarian_matching.py  hungarian_matching.py  rtdetr_criterion.py
ttadapters/datasets/: GOT10k.py  SHIFT.py  __init__.py  acdc.py  base.py  cityscapes.py  got10k.py  shift.py  transform.py
ttadapters/datasets/scenarios/: __init__.py
ttadapters/methods/: ENGINES_USAGE.md  __init__.py  base.py  configs.py  framework_adapters.py  plugins.py
ttadapters/methods/batchnorms/: __init__.py
ttadapters/methods/other_method/: baseline.py  baseline_test.ipynb  config.yaml  fast_baseline.py  fast_baseline_example.ipynb  our_method.py  rtdetr_baseline.py  rtdetr_baseline_example.ipynb  test_fastrcnn.ipynb  utils.py  whw_statistics.py
ttadapters/methods/pefts/: __init__.py
ttadapters/methods/regularizers/: __init__.py
ttadapters/methods/samplers/: __init__.py
ttadapters/models/: __init__.py  base.py
ttadapters/models/rcnn/: __init__.py  de.py  hooks.py  modelings.py  transforms.py
ttadapters/models/rt_detr/: __init__.py  hf.py  modelings.py
ttadapters/models/yolo11/: __init__.py  modelings.py  ul.py  wrapper.py  (+1 more)
ttadapters/utils/: validator.py  visualizer.py
(+35 files in other folders)
