[project]
name = "ttadapters"
version = "1.0.0"
description = "Pluggable Test-time Adapter Implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "accelerate",
    "timm>=1.0.19",
    "transformers>=4.52.3",
    "ultralytics>=8.3.169",
    "numpy>=2.3.1",
    "supervision>=0.25.1",
    "shift-dev",

    "notebook>=7.4.4",
    "jupyterlab>=4.4.4",
    "ipywidgets>=8.1.7",
    "tqdm>=4.67.1",
    "wandb>=0.21.0"
]

[tool.uv.sources]
shift-dev = { git = "https://github.com/robustaim/shift-dev" }
