[project]
name = "ttadapters"
version = "1.0.0"
description = "Pluggable Test-time Adapter Implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "transformers>=4.52.3",
    "detectron2",

    "numpy>=2.3.1",
    "supervision>=0.25.1",
    "torchinfo>=1.8.0",
    "imagecorruptions>=1.1.2",
    "cityscapesscripts>=2.2.4",
    "shift-dev",

    "notebook>=7.4.4",
    "jupyterlab>=4.4.4",
    "ipywidgets>=8.1.7",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
    "gdown>=5.2.0",
    "hf-xet>=1.1.10"
]
[project.optional-dependencies]
torch = [
    "torch",
    "torchvision"
]
torch-cu128 = [
    "torch",
    "torchvision"
]


[tool.uv.sources]
torch = [
    { index = "torch-cu128" }
]
torchvision = [
    { index = "torch-cu128" }
]
shift-dev = { git = "https://github.com/robustaim/shift-dev" }
detectron2 = { git = "https://github.com/robustaim/detectron2" }

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
